# libfreenect

./: CMakeLists.txt
cmake_modules/: Findopenni.cmake
examples/: CMakeLists.txt  glview.c
fakenect/: fakenect.c
include/: libfreenect.h
src/: CMakeLists.txt  cameras.c  core.c  freenect_internal.h  tilt.c  usb_libusb10.c  usb_libusb_win32.c  usb_libusb_win32.h  usb_openni.cpp  usb_openni.h
src-win/: Kinect-win32.cpp  Kinect.vcxproj  Kinect.vcxproj.filters  libfreenect-win32.cpp
src-win/Freenect-MinimalSample/: Freenect-MinimalSample.cpp  Freenect-MinimalSample.vcxproj
src-win/Kinect-MinimalSample/: Kinect-MinimalSample.vcxproj
src-win/glview/: glview.vcxproj  glview.vcxproj.filters
wrappers/win32/: Kinect-win32.h  Kinect.sln  Kinect.vcxproj  Kinect.vcxproj.filters  libfreenect.h
wrappers/win32/Freenect-MinimalSample/: Freenect-MinimalSample.vcxproj
wrappers/win32/Kinect-MinimalSample/: Kinect-MinimalSample.vcxproj
wrappers/win32/glview/: glview.cpp  glview.vcxproj  glview.vcxproj.filters
